--- a/src/notes/notes.html
+++ b/src/notes/notes.html
@@ -17,7 +17,7 @@
 <li><p>N011: Realizability at work, June, 2017. [<a href="../../document/notes/realization.pdf">pdf</a>]</p>
 <p><strong>Remarks</strong>: This notes shows examples of realization by termination and realization by shape index.</p></li>
 <li><p>N012: Shape Realization, August, 2017. [<a href="../../document/notes/shape-real.pdf">pdf</a>]</p>
-<p><strong>Remarks</strong>: This notes shows how to obtain a shape indexed version of a linear language. However, it suffers from an error due to the definition of shape on term. More specifically, the variable case for Theorem 5 does not hold. A more specialized version of shape will have to define for Theorem 5.</p></li>
+<p><strong>Remarks</strong>: This notes shows how to obtain a shape indexed version of a linear language. However, it suffers from an error due to the definition of shape on term. More specifically, the variable case for Theorem 5 does not hold. A more specialized version of shape will have to define for Theorem 5. This error was pointed out by Peter Selinger.</p></li>
 </ul>
 <h1 id="articles" class="unnumbered">Articles</h1>
 <ul>
