--- a/src/talks/talks.html
+++ b/src/talks/talks.html
@@ -1,22 +1,6 @@
-<head>
-<title>Talks </title>
-<!-- <base href="http://www.divms.uiowa.edu/~pfu/"> -->
-<!-- <link rev="made" href="mailto:pfu@divms.uiowa.edu"> -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-36515113-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-</head>
-
 <h1 id="talks" class="unnumbered">Talks</h1>
 <ul>
+<li><p><em>Encoding Data in Lambda Calculus: An Introduction.</em>. September 26, 2017, Atlantic Category Seminar, Dalhousie University, Canada. [<a href="../../document/talks/lam.pdf">Slides</a>]</p></li>
 <li><p><em>Proof Relevant Corecursive Resolution</em>. June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="../../document/talks/spls-2016.pdf">Slides</a>]</p></li>
 <li><p><em>A Type-Theoretic Approach to Structural Resolution</em>. July 13, 2015, LOPSTR, Siena, Italy. [<a href="../../document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
 <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>. July 15, 2014, RTA-TLCA, Vienna, Austria. [<a href="../../document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
