restructure my homepage

--- a/index.html
+++ b/index.html
@@ -1,29 +1,110 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<!DOCTYPE html>
+
 <html>
 <head>
-<title>Frank Fu </title>
+  <title>Frank Fu </title>
+  <link rel="stylesheet" href="mystyle.css" />
 </head>
-<body link="009999">
 
-<h2>Frank(Peng) Fu</h2>
-My research interests are lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language
+<body>
+  <div id="header">
+    <div id="name-area">
+      <span id="name">Frank(Peng) Fu</span> <br />
+      <span id="title">Postdoctoral researcher</span> <br />
+      <span id="department">Department of Mathematics and Statistics </span> <br/>
+    </div>
+    <div id="contact-info">
+      <a href="http://mathstat.dal.ca">Dalhousie University</a> <br />
+      Chase Building 251
+     <br />
+     Email: frank-fu at dal.ca
+     <br />
+     Twitter: @Fraenkell
+     <br />
 
-<h2>Education</h2>
-<li> Ph.D. in Computer Science, the University of Iowa, 2014 </li> 
-<li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li> 
+    </div>
+  </div>
 
-<h2>Quick Links</h2>
-<li> <a href="./src/notes/notes.html">Notes and Articles</a> </li>
-<li> <a href="./src/publications/publications.html">Selected publications</a> </li>
-<li> <a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]  </li>
-<li> <a href="./src/talks/talks.html">Selected talks</a> </li>
+  
+  <br />
+<div id="quicklinks">
+  <ul class="jump-bar">
+  <li><a href="#cv">CV</a></li>
+    <li class="nbsp">&nbsp;</li>  
+  <li><a href="#papers">Papers</a></li>
+    <li class="nbsp">&nbsp;</li>  
+  <li><a href="#projects">Projects</a></li>
+    <li class="nbsp">&nbsp;</li>
+  <li><a href="#talks">Talks</a></li>
+  <li class="nbsp">&nbsp;</li>
+  <li><a href="#notes">Notes</a></li>
+  <li class="nbsp">&nbsp;</li>
 
-<h2>Contact</h2>
-Email: peng-fu at uiowa.edu
+  <li><a href="#blog">Blog</a></li>
+    <li class="nbsp">&nbsp;</li>
 
-<h2>Recent Events</h2>
+  </ul>
+  </id>  
 
-<li> There are no events. </li>
+  <hr />
+  [Jan 1, 2019] This website is currently under maintenance.  
+  <hr />
+  <div>
+
+    
+    <h3>Research</h3>
+    <p>
+      My research interests are lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language
+    </p>
+  </div>
+
+  <h3>Education</h3>
+  <li> Ph.D. in Computer Science, the University of Iowa, 2014 </li> 
+  <li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li> 
+
+
+<hr />
+
+
+<a name="papers"></a>
+<h3>Papers</h3>
+<ul>
+  <li><p>Proof Relevant Corecursive Resolution.</p>
+    <p>Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond. International Symposium on Functional and Logic Programming, FLOPS 2016.</p></li>
+  <li><p>A Type-Theoretic Approach to Resolution.</p>
+    <p>Peng Fu, Ekaterina Komendantskaya. International Symposium on Logic-Based Program Synthesis and Transformation, LOPSTR 2015.</p></li>
+  <li><p>Self Types for Dependently Typed Lambda Encodings.</p>
+    <p>Peng Fu, Aaron Stump. Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications, RTA-TLCA 2014.</p></li>
+
+  <li><p>Operational Semantics of Resolution and Productivity in Horn Clause Logic.</p>
+    <p>Peng Fu, Ekaterina Komendantskaya. Formal Aspect of Computing, Journal Version of LOPSTR 2015, to appear.</p></li>
+  <li><p>Efficiency of Lambda-Encodings in Total Type Theory.</p>
+    <p>Aaron Stump, Peng Fu. Journal of Functional Programming, 2016.</p></li>
+
+  <li><p><span> Equational Reasoning about Programs with General Recursion and Call-by-value Semantics</span>.</p>
+    <p>Garrin Kimmell, Aaron Stump, Harley Eades III, Peng Fu, Tim Sheard, Stephanie Weirich, Chris Casinghino, Vilhelm Sjoberg, Nathan Collins, Ki Yung Ahn. Programming Languages meets Program Verification, PLPV 2012.</p></li>
+  <li><p><span> Irrelevance, Heterogeneous Equality, and Call-by-value Dependent Type Systems. </span></p>
+    <p>Vilhelm Sjoberg,Chris Casinghino, Ki Yung Ahn, Nathan Collins, Harley Eades III, Peng Fu, Garrin Kimmell, Tim Sheard, Aaron Stump, Stephanie Weirich. Mathematically Structured Functional Programming, MSFP 2012.</p></li>
+  <li><p>A Framework for Internalizing Relations into Type Theory.</p>
+    <p>Peng Fu, Aaron Stump, Jeff Vaughan. International Workshop on Proof-Search in Axiomatic Theories and Type Theories, PSATTT 2011.</p></li>
+
+</ul>
+
+
+
+<hr />
+
+<a name="projects"></a>
+<h3>Projects</h3>
+
+
+<hr />
+<a name="talks"></a>
+
+<h3>Talks</h3>
+
+
+
 
 </body>
 
