--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <li class="nbsp">&nbsp;</li>
 
   </ul>
-  </id>  
+  </div>  
 
   <hr />
   [Jan 1, 2019] This website is currently under maintenance.  
@@ -135,25 +135,25 @@
 <ul>
   <li><p><em>Encoding Data in Lambda Calculus: An Introduction</em>
       September 26, 2017, Atlantic Category Seminar, Dalhousie University, Canada.
-      [<a href="../../document/talks/lam.pdf">Slides</a>]</p></li>
+      [<a href="./document/talks/lam.pdf">Slides</a>]</p></li>
 
   <li><p><em>Proof Relevant Corecursive Resolution</em>
-      June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="../../document/talks/spls-2016.pdf">Slides</a>]</p></li>
+      June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="./document/talks/spls-2016.pdf">Slides</a>]</p></li>
 
   <li><p><em>A Type-Theoretic Approach to Structural Resolution</em>
-      July 13, 2015, LOPSTR, Siena, Italy. [<a href="../../document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
+      July 13, 2015, LOPSTR, Siena, Italy. [<a href="./document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
 
   <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>
-      July 15, 2014, RTA-TLCA, Vienna, Austria. [<a href="../../document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
+      July 15, 2014, RTA-TLCA, Vienna, Austria. [<a href="./document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
 
   <li><p><em>Lambda Encodings in Type Theory</em>
-      May 2, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="../../document/talks/thesis-talk.pdf">Slides</a>]</p></li>
+      May 2, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="./document/talks/thesis-talk.pdf">Slides</a>]</p></li>
 
   <li><p><em>Dependent Lambda Encoding with Self Types</em>
-      September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [<a href="../../document/talks/dtp-2013.pdf">Slides</a>]</p></li>
+      September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [<a href="./document/talks/dtp-2013.pdf">Slides</a>]</p></li>
 
   <li><p><em>A Framework for Internalizing Relations into Type Theory</em>
-      August 2011, PSATTT workshop, Wroclaw. Poland. [<a href="../../document/talks/psattt11-talk.pdf">Slides</a>]</p></li>
+      August 2011, PSATTT workshop, Wroclaw. Poland. [<a href="./document/talks/psattt11-talk.pdf">Slides</a>]</p></li>
 </ul>
 
 
@@ -162,39 +162,40 @@
 <a name="notes"></a>
 <h3><a href="#Top">Notes</a> </h3>
 
-<ul id="notes">
-  <li><p> Reducibility Method for Call-by-Value Simply Typed Lambda Calculus, March 2010. [<a href="../../document/notes/reducibility-stlc.pdf">pdf</a>]</p></li>
+<ul id="noteslist">
+    <li><p> <em>Reducibility Method for Call-by-Value Simply Typed Lambda Calculus</em>, March 2010. [<a href="./document/notes/reducibility-stlc.pdf">pdf</a>]</p></li>
 
-  <li><p> Subtyping Relation as Reducibility Set Inclusion, March 2010. [<a href="../../document/notes/subtyping-st.pdf">pdf</a>]</p></li>
+  <li><p> <em>Subtyping Relation as Reducibility Set Inclusion</em>, March 2010. [<a href="./document/notes/subtyping-st.pdf">pdf</a>]</p></li>
 
-  <li><p> Reducibility Method for Call-by-Value System F, June 2010. [<a href="../../document/notes/system-f-iii.pdf">pdf</a>]</p></li>
+  <li><p> <em>Reducibility Method for Call-by-Value System F</em>, June 2010. [<a href="./document/notes/system-f-iii.pdf">pdf</a>]</p></li>
 
-  <li><p> Type Preservation for System F a la Curry, 2011. [<a href="../../document/notes/systemf.pdf">pdf</a>]</p></li>
+  <li><p> <em>Type Preservation for System F a la Curry</em>, 2011. [<a href="./document/notes/systemf.pdf">pdf</a>]</p></li>
 
-  <li><p> Confluence for Local Lambda-Mu Calculus, July 2013. [<a href="../../document/notes/conf-lambda-mu-II.pdf">pdf</a>]</p>
+  <li><p> <em>Confluence for Local Lambda-Mu Calculus</em>, July 2013. [<a href="./document/notes/conf-lambda-mu-II.pdf">pdf</a>]</p>
 
-  <li><p> Type Preservation for Curry Style F-omega, July 2013. [<a href="../../document/notes/fomega-presv.pdf">pdf</a>]</p>
-    <p><strong>Remarks</strong>: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style system F (N004) to F-omega</p></li>
+  <li><p> <em>Type Preservation for Curry Style F-omega</em>, July 2013. [<a href="./document/notes/fomega-presv.pdf">pdf</a>]</p>
+    <p><strong>Remarks</strong>: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style System F to F-omega</p></li>
 
-  <li><p> Lambda Encoding, Types and Confluence. [<a href="../../document/notes/comp-exam.pdf">pdf</a>]</p>
+  <li><p> <em>Lambda Encoding, Types and Confluence</em>. [<a href="./document/notes/comp-exam.pdf">pdf</a>]</p>
     <p>Peng Fu. May 2013.</p>
     <p><strong>Remarks</strong>: This is my comprehensive exam paper.</p></li>
-  <li><p> Lambda Encoding with Comprehension. [<a href="../../document/notes/comprehension.pdf">pdf</a>]</p>
+
+  <li><p> <em>Lambda Encoding with Comprehension</em>. [<a href="./document/notes/comprehension.pdf">pdf</a>]</p>
     <p>Peng Fu. Oct 2013.</p>
     
     <p><strong>Remarks</strong>: A Chapter from my dissertation.</p></li>
 
-  <li><p> Dependently-typed Programming with Scott Encoding. Peng Fu, Aaron Stump. 2013. [<a href="../../document/papers/scott-dep.pdf">pdf</a>]</p></li>
+  <li><p><em> Dependently-typed Programming with Scott Encoding</em>. Peng Fu, Aaron Stump. 2013. [<a href="./document/papers/scott-dep.pdf">pdf</a>]</p></li>
   
-  <li><p>Type Class and Logic Programming with Term Matching, Nov 2014. [<a href="../../document/notes/tm.pdf">pdf</a>]</p>
+  <li><p><em>Type Class and Logic Programming with Term Matching</em>, Nov 2014. [<a href="./document/notes/tm.pdf">pdf</a>]</p>
     <p><strong>Remarks</strong>: This note shows how one can have a notion of <em>logic programming</em> based solely on term matching.</p></li>
   
-  <li><p>Realizability at work, June, 2017. [<a href="../../document/notes/realization.pdf">pdf</a>]</p>
+  <li><p><em>Realizability at work</em>, June, 2017. [<a href="./document/notes/realization.pdf">pdf</a>]</p>
     <p><strong>Remarks</strong>: This notes shows examples of realization by termination and realization by shape index.</p></li>
 </ul>
 
 <script type="text/javascript">
-  reverse("notes");
+  reverse("noteslist");
 </script>
 
 </body>
