--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <script type="text/x-mathjax-config">
   MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
   </script>
-  <script type="text/javascript"
-          src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
+  <script type="text/javascript" 
+          src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>  
   <script type="text/javascript" src="myjs.js">
   </script>
 </head>
@@ -28,9 +28,7 @@
      <br />
      Email: frank-fu at dal.ca
      <br />
-     Twitter: @Fraenkell
-     <br />
-
+     Phone: 902-494-6760
     </div>
   </div>
 
@@ -38,7 +36,6 @@
   <br />
 <div id="quicklinks">
   <ul class="jump-bar">
-  <li><a href="#cv">CV</a></li>
     <li class="nbsp">&nbsp;</li>  
   <li><a href="#papers">Papers</a></li>
     <li class="nbsp">&nbsp;</li>  
@@ -48,22 +45,28 @@
   <li class="nbsp">&nbsp;</li>
   <li><a href="#notes">Notes</a></li>
   <li class="nbsp">&nbsp;</li>
-
-  <li><a href="http://www.steprow.wordpress.com">Blog</a></li>
-    <li class="nbsp">&nbsp;</li>
-
+  <li><a href="#cv">Job application materials</a></li>
   </ul>
   </div>  
 
-  <hr />
-  [Jan 1, 2019] This website is currently under maintenance.  
+  <!-- <hr /> -->
+  <!-- [Jan 1, 2019] This website is currently under maintenance.   -->
   <hr />
   <div>
 
     
     <h3>Research</h3>
     <p>
-      My research interests are lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language
+      Broadly speaking, I am interested in type theories and their applications in
+      programming languages. In the past, I worked on supporting the
+      verification of lambda-encoded programs in a <a href="#self-type">type system</a>
+      and in a <a href="#gottlob">higher-order logic.</a>
+      I also enjoyed working on Haskell-style <a href="#resolve">type class</a>,
+      which leads to a connection to <a href="#rewriting">term rewriting</a>.
+      I was excited to discover that we can verify and program with nested data types
+      in a total programming language with <a href="#nested">dependent types</a>.
+      Recently, I am working on a linear dependently typed programming language for
+      circuit design. 
     </p>
   </div>
 
@@ -80,32 +83,46 @@
 
 <h3><a href="#Top">Papers</a> </h3>
 <ul>
-
-  <li><p><em> Dependently typed folds for nested data types.</em>
-    Peng Fu, Peter Selinger, 2018 </p></li>
+  
+   <li><a name="nested"></a>
+    <p><em> Dependently typed folds for nested data types.</em>
+    Peng Fu, Peter Selinger, 2018.
+    [<a href="https://arxiv.org/abs/1806.05230">arXiv</a>]</p></li>
 
   <li><p><em> A Type Checking Algorithm for Higher-rank, Impredicative and Second-order Types.</em>
-    Peng Fu, 2017 </p></li>
+    Peng Fu, 2017.
+    [<a href="https://arxiv.org/abs/1711.04718">arXiv</a>]</p></li>
   
-  <li><p><em> Representing Nonterminating Rewriting with $\mathbf{F}^2_{\mu}$.</em>
-    Peng Fu, 2017 </p></li>
+  <li><a name="rewriting"></a>
+      <p><em> Representing Nonterminating Rewriting with $\mathbf{F}^2_{\mu}$.</em>
+      Peng Fu, 2017. 
+    [<a href="https://arxiv.org/abs/1706.00746">arXiv</a>]</p></li>
 
 
   <li><p><em>Efficiency of Lambda-Encodings in Total Type Theory.</em>
-    Aaron Stump, Peng Fu. Journal of Functional Programming, 2016.</p></li>
+    Aaron Stump, Peng Fu. Journal of Functional Programming, 2016.
+    [<a href="./document/papers/efficiency.pdf">pdf</a>]</p></li>
 
-  <li><p><em>Proof Relevant Corecursive Resolution.</em>
+  <li><a name="resolve"></a>
+<p><em>Proof Relevant Corecursive Resolution.</em>
     Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond.
-      International Symposium on Functional and Logic Programming, 2016.</p></li>
+      International Symposium on Functional and Logic Programming, 2016.
+     [<a href="./document/papers/corec.pdf">pdf</a>] 
+      </p></li>
 
   <li><p><em>Operational Semantics of Resolution and Productivity in Horn Clause Logic.</em>
-    Peng Fu, Ekaterina Komendantskaya. Formal Aspect of Computing, 2016 </p></li>
+    Peng Fu, Ekaterina Komendantskaya. Formal Aspect of Computing, 2016 [<a href="./document/papers/fac-journal.pdf">pdf</a>]</p></li>
 
   <li><p><em>A Type-Theoretic Approach to Resolution.</em>
-    Peng Fu, Ekaterina Komendantskaya. International Symposium on Logic-Based Program Synthesis and Transformation, 2015.</p></li>
+    Peng Fu, Ekaterina Komendantskaya. International Symposium on Logic-Based Program Synthesis and Transformation, 2015.
+      [<a href="./document/papers/tm-lp.pdf">pdf</a>]
+      </p></li>
   
-  <li><p><em>Self Types for Dependently Typed Lambda Encodings.</em>
-    Peng Fu, Aaron Stump. Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications, 2014.</p></li>
+  <li><a name="self-type"></a>
+<p><em>Self Types for Dependently Typed Lambda Encodings.</em>
+    Peng Fu, Aaron Stump. Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications, 2014.
+      [<a href="./document/papers/rta-tlca.pdf">pdf</a>]
+      </p></li>
 
 
   <li><p><em> Equational Reasoning about Programs with General Recursion and Call-by-value Semantics.</em>
@@ -115,7 +132,9 @@
   </li>
   
   <li><p><em>A Framework for Internalizing Relations into Type Theory.</em>
-    Peng Fu, Aaron Stump, Jeff Vaughan. International Workshop on Proof-Search in Axiomatic Theories and Type Theories, 2011.</p></li>
+    Peng Fu, Aaron Stump, Jeff Vaughan. International Workshop on Proof-Search in Axiomatic Theories and Type Theories, 2011.
+      [<a href="./document/papers/psattt-paper.pdf">pdf</a>]
+      </p></li>
 
 </ul>
 
@@ -167,26 +186,29 @@
 
   <li><p> <em>Subtyping Relation as Reducibility Set Inclusion</em>, March 2010. [<a href="./document/notes/subtyping-st.pdf">pdf</a>]</p></li>
 
-  <li><p> <em>Reducibility Method for Call-by-Value System F</em>, June 2010. [<a href="./document/notes/system-f-iii.pdf">pdf</a>]</p></li>
+  <li><p> <em>Reducibility Method for Call-by-Value System $\mathbf{F}$</em>, June 2010. [<a href="./document/notes/system-f-iii.pdf">pdf</a>]</p></li>
 
-  <li><p> <em>Type Preservation for System F a la Curry</em>, 2011. [<a href="./document/notes/systemf.pdf">pdf</a>]</p></li>
+  <li><p> <em>Type Preservation for System $\mathbf{F}$ a la Curry</em>, 2011. [<a href="./document/notes/systemf.pdf">pdf</a>]</p></li>
 
   <li><p> <em>Confluence for Local Lambda-Mu Calculus</em>, July 2013. [<a href="./document/notes/conf-lambda-mu-II.pdf">pdf</a>]</p>
 
-  <li><p> <em>Type Preservation for Curry Style F-omega</em>, July 2013. [<a href="./document/notes/fomega-presv.pdf">pdf</a>]</p>
-    <p><strong>Remarks</strong>: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style System F to F-omega</p></li>
+  <li><p> <em>Type Preservation for Curry Style $\mathbf{F}_{\omega}$</em>, July 2013. [<a href="./document/notes/fomega-presv.pdf">pdf</a>]</p>
+      <p><strong>Remarks</strong>: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style System $\mathbf{F}$ to $\mathbf{F}_{\omega}$</p></li>
 
   <li><p> <em>Lambda Encoding, Types and Confluence</em>. [<a href="./document/notes/comp-exam.pdf">pdf</a>]</p>
     <p>Peng Fu. May 2013.</p>
     <p><strong>Remarks</strong>: This is my comprehensive exam paper.</p></li>
 
-  <li><p> <em>Lambda Encoding with Comprehension</em>. [<a href="./document/notes/comprehension.pdf">pdf</a>]</p>
+ 
+    <li><p><em> Dependently-typed Programming with Scott Encoding</em>. Peng Fu, Aaron Stump. 2013. [<a href="./document/papers/scott-dep.pdf">pdf</a>]</p></li>
+ 
+    <li><a name="gottlob"></a>
+<p> <em>Lambda Encoding with Comprehension</em>. [<a href="./document/notes/comprehension.pdf">pdf</a>]</p>
     <p>Peng Fu. Oct 2013.</p>
     
     <p><strong>Remarks</strong>: A Chapter from my dissertation.</p></li>
 
-  <li><p><em> Dependently-typed Programming with Scott Encoding</em>. Peng Fu, Aaron Stump. 2013. [<a href="./document/papers/scott-dep.pdf">pdf</a>]</p></li>
-  
+ 
   <li><p><em>Type Class and Logic Programming with Term Matching</em>, Nov 2014. [<a href="./document/notes/tm.pdf">pdf</a>]</p>
     <p><strong>Remarks</strong>: This note shows how one can have a notion of <em>logic programming</em> based solely on term matching.</p></li>
   
