--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 
 <html>
 <head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-36515113-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-36515113-2');
+</script>
+
+
   <title>Frank Fu </title>
   <link rel="stylesheet" href="mystyle.css" />
   <script type="text/x-mathjax-config">
