--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 
 <html>
 <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-36515113-2"></script>
+<script src="https://www.googletagmanager.com/gtag/js?id=UA-36515113-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-36515113-2');
 </script>
 
@@ -155,34 +154,26 @@
 <a name="projects"></a>
 <h3><a href="#Top">Projects</a> </h3>
 
-
-<hr />
-
-<a name="talks"></a>
-<h3><a href="#Top">Talks</a> </h3>
-
 <ul>
-  <li><p><em>Encoding Data in Lambda Calculus: An Introduction</em>
-      September 26, 2017, Atlantic Category Seminar, Dalhousie University, Canada.
-      [<a href="./document/talks/lam.pdf">Slides</a>]</p></li>
+    <li> Dependently typed folds for nested data types. 
+        [<a href = "https://github.com/Fermat/dependent-fold"> Projects link</a>]
+        [<a href = "https://arxiv.org/abs/1806.05230"> Paper documention in arXiv</a>]</br>
+        <strong>Summary:</strong> 
+        This project shows how to program with nested data types
+        in the total dependently typed language Agda using a new construct called dependently typed
+        fold. We show how to derive induction principles for nested data types as well, hence enabling
+        the verification of programs within Agda. As a case study, we translated all of the programs
+        described by Ricard Bird and Ross Patterson's paper
+        "De Bruijn notation as nested datatype" into Agda and
+        prove their correctness within Agda. The Agda code is available in the project link above. 
+        The paper documentation explains the idea of the dependently typed folds and how to 
+        verify programs using the induction principles derived from the dependently typd folds. 
+    </li> 
 
-  <li><p><em>Proof Relevant Corecursive Resolution</em>
-      June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="./document/talks/spls-2016.pdf">Slides</a>]</p></li>
 
-  <li><p><em>A Type-Theoretic Approach to Structural Resolution</em>
-      July 13, 2015, LOPSTR, Siena, Italy. [<a href="./document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
 
-  <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>
-      July 15, 2014, RTA-TLCA, Vienna, Austria. [<a href="./document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
 
-  <li><p><em>Lambda Encodings in Type Theory</em>
-      May 2, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="./document/talks/thesis-talk.pdf">Slides</a>]</p></li>
 
-  <li><p><em>Dependent Lambda Encoding with Self Types</em>
-      September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [<a href="./document/talks/dtp-2013.pdf">Slides</a>]</p></li>
-
-  <li><p><em>A Framework for Internalizing Relations into Type Theory</em>
-      August 2011, PSATTT workshop, Wroclaw. Poland. [<a href="./document/talks/psattt11-talk.pdf">Slides</a>]</p></li>
 </ul>
 
 
@@ -229,6 +220,37 @@
 <script type="text/javascript">
   reverse("noteslist");
 </script>
+
+<hr />
+
+<a name="talks"></a>
+<h3><a href="#Top">Talks</a> </h3>
+
+<ul>
+
+  <li><p><em>Encoding Data in Lambda Calculus: An Introduction</em>
+      September 26, 2017, Atlantic Category Seminar, Dalhousie University, Canada.
+      [<a href="./document/talks/lam.pdf">Slides</a>]</p></li>
+
+  <li><p><em>Proof Relevant Corecursive Resolution</em>
+      June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="./document/talks/spls-2016.pdf">Slides</a>]</p></li>
+
+  <li><p><em>A Type-Theoretic Approach to Structural Resolution</em>
+      July 13, 2015, LOPSTR, Siena, Italy. [<a href="./document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
+
+  <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>
+      July 15, 2014, RTA-TLCA, Vienna, Austria. [<a href="./document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
+
+  <li><p><em>Lambda Encodings in Type Theory</em>
+      May 2, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="./document/talks/thesis-talk.pdf">Slides</a>]</p></li>
+
+  <li><p><em>Dependent Lambda Encoding with Self Types</em>
+      September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [<a href="./document/talks/dtp-2013.pdf">Slides</a>]</p></li>
+
+  <li><p><em>A Framework for Internalizing Relations into Type Theory</em>
+      August 2011, PSATTT workshop, Wroclaw. Poland. [<a href="./document/talks/psattt11-talk.pdf">Slides</a>]</p></li>
+</ul>
+
 
 </body>
 
