add two projects

--- a/index.html
+++ b/index.html
@@ -127,7 +127,13 @@
       [<a href="./document/papers/tm-lp.pdf">pdf</a>]
       </p></li>
   
-  <li><a name="self-type"></a>
+   <li><a name="self-type"></a>
+
+<p><em> Lambda Encodings in Type Theory.</em>
+    Peng Fu, Dissertation, 2014.
+      [<a href="./document/papers/.pdf">pdf</a>]
+      </p></li>
+     
 <p><em>Self Types for Dependently Typed Lambda Encodings.</em>
     Peng Fu, Aaron Stump. Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications, 2014.
       [<a href="./document/papers/rta-tlca.pdf">pdf</a>]
@@ -158,7 +164,7 @@
     <li> Dependently typed folds for nested data types. 
         [<a href = "https://github.com/Fermat/dependent-fold"> Projects link</a>]
         [<a href = "https://arxiv.org/abs/1806.05230"> Paper documention in arXiv</a>]</br>
-        <strong>Summary:</strong> 
+      <p> <strong>Summary:</strong> 
         This project shows how to program with nested data types
         in the total dependently typed language Agda using a new construct called dependently typed
         fold. We show how to derive induction principles for nested data types as well, hence enabling
@@ -167,10 +173,19 @@
         "De Bruijn notation as nested datatype" into Agda and
         prove their correctness within Agda. The Agda code is available in the project link above. 
         The paper documentation explains the idea of the dependently typed folds and how to 
-        verify programs using the induction principles derived from the dependently typd folds. 
+        verify programs using the induction principles derived from the dependently typd folds.
+      </p>
     </li> 
 
+    <li> A Type Checking Algorithm for Higher-rank, Impredicative and Second-order Types.
+        [<a href = "https://github.com/Fermat/higher-rank"> Projects link</a>]
+        [<a href = "https://arxiv.org/abs/1711.04718"> Paper documention in arXiv</a>]</br>
+        <strong>Summary:</strong> 
+    </li> 
 
+   <li> Gottlob: a theorem prover for verifying lambda encoded programs. 
+        <strong>Summary:</strong> 
+    </li> 
 
 
 
@@ -227,7 +242,10 @@
 <h3><a href="#Top">Talks</a> </h3>
 
 <ul>
-
+  <li><p><em>Dependent types in Proto-quipper</em>
+      September 20, 2018, Dagstuhl Seminar: Quantum Programming Languages, Dagstuhl, Germany.
+  </p></li>
+  
   <li><p><em>Encoding Data in Lambda Calculus: An Introduction</em>
       September 26, 2017, Atlantic Category Seminar, Dalhousie University, Canada.
       [<a href="./document/talks/lam.pdf">Slides</a>]</p></li>
