--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
      i.e. there is no type infer process, a program will always be checked against a certain type.
      As a case study, we implement a prototype type checker and 
      use it to type check some nontrivial algorithms that makes essential use of impredicativity
-     and second-order types, these include Stump's Church-encoded merge-sort, Bird and Patterson's 
-     generalized folds.
+     and second-order types, these include Stump's Church-encoded merge-sort(<a href = "https://github.com/Fermat/higher-rank/blob/master/test/church-braun.hr">see here</a>), Bird and Patterson's 
+     generalized folds(<a href = "https://github.com/Fermat/higher-rank/blob/master/test/bird.hr">see here</a>).
      </p>
     </li> 
 
