fixed dissertation link

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 <p><em> Lambda Encodings in Type Theory.</em>
     Peng Fu, Dissertation, 2014.
-      [<a href="./document/papers/.pdf">pdf</a>]
+      [<a href="./document/papers/dissertation.pdf">pdf</a>]
       </p></li>
       <li>
           <p><em>Self Types for Dependently Typed Lambda Encodings.</em>
