--- a/index.html
+++ b/index.html
@@ -272,30 +272,30 @@
 <h3><a href="#Top">Talks</a> </h3>
 
 <ul>
-  <li><p><em>Dependent types in Proto-quipper</em>
+  <li><p><em>Dependent types in Proto-quipper</em>,
       September 20, 2018, Dagstuhl Seminar: Quantum Programming Languages, Dagstuhl, Germany.
   </p></li>
   
-  <li><p><em>Encoding Data in Lambda Calculus: An Introduction</em>
+  <li><p><em>Encoding Data in Lambda Calculus: An Introduction</em>,
       September 26, 2017, Atlantic Category Seminar, Dalhousie University, Canada.
       [<a href="./document/talks/lam.pdf">Slides</a>]</p></li>
 
-  <li><p><em>Proof Relevant Corecursive Resolution</em>
+  <li><p><em>Proof Relevant Corecursive Resolution</em>,
       June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="./document/talks/spls-2016.pdf">Slides</a>]</p></li>
 
-  <li><p><em>A Type-Theoretic Approach to Structural Resolution</em>
+  <li><p><em>A Type-Theoretic Approach to Structural Resolution</em>,
       July 13, 2015, LOPSTR, Siena, Italy. [<a href="./document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
 
-  <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>
+  <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>,
       July 15, 2014, RTA-TLCA, Vienna, Austria. [<a href="./document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
 
-  <li><p><em>Lambda Encodings in Type Theory</em>
+  <li><p><em>Lambda Encodings in Type Theory</em>,
       May 2, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="./document/talks/thesis-talk.pdf">Slides</a>]</p></li>
 
-  <li><p><em>Dependent Lambda Encoding with Self Types</em>
+  <li><p><em>Dependent Lambda Encoding with Self Types</em>,
       September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [<a href="./document/talks/dtp-2013.pdf">Slides</a>]</p></li>
 
-  <li><p><em>A Framework for Internalizing Relations into Type Theory</em>
+  <li><p><em>A Framework for Internalizing Relations into Type Theory</em>,
       August 2011, PSATTT workshop, Wroclaw. Poland. [<a href="./document/talks/psattt11-talk.pdf">Slides</a>]</p></li>
 </ul>
 
