update papers and talks.

--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
       which leads to a connection to <a href="#rewriting">term rewriting</a>.
       I was excited to discover that we can verify and program with nested data types
       in a total programming language with <a href="#nested">dependent types</a>.
-      Recently, I am working on the design and implementation of a linear dependently typed programming language for
-      circuit design. 
+      Recently, I am working on the design and implementation of a linear
+      dependently typed system for <a href="#dpq">quantum programming language</a>,
+      see a tutorial <a href="#dpq-tutorial">here</a>.
+    
     </p>
   </div>
 
@@ -93,6 +95,17 @@
 
 <h3><a href="#Top">Papers</a> </h3>
 <ul>
+   <li><a name="dpq"></a>
+    <p><em> Linear Dependent Type Theory for Quantum Programming Languages.</em>
+    Peng Fu, Kohei Kishida, Peter Selinger, 35th Annual ACM/IEEE Symposium on Logic
+  in Computer Science, 2020. 
+    [<a href="https://arxiv.org/abs/2004.13472">arXiv</a>]</p></li>
+
+   <li><a name="dpq-tutorial"></a>
+    <p><em> A tutorial introduction to quantum circuit programming in dependently typed Proto-Quipper.</em>
+    Peng Fu, Kohei Kishida, Neil J. Ross, Peter Selinger, 12th International Conference on Reversible Computation, 2020.
+    </p></li>
+
   
    <li><a name="nested"></a>
     <p><em> Dependently typed folds for nested data types.</em>
@@ -250,6 +263,12 @@
 <h3><a href="#Top">Talks</a> </h3>
 
 <ul>
+
+  <li><p><em>Linear dependent types for quantum circuit programming</em>,
+      February 17, 2020, PL Reading Group, University of Maryland, College Park, Maryland, USA.
+      [<a href="./document/talks/umd-2020.pdf">Slides</a>]
+  </p></li>
+  
   <li><p><em>Dependent types in Proto-quipper</em>,
       September 20, 2018, Dagstuhl Seminar: Quantum Programming Languages, Dagstuhl, Germany.
   </p></li>
