add dpq project description

--- a/index.html
+++ b/index.html
@@ -175,6 +175,20 @@
 <h3><a href="#Top">Projects</a> </h3>
 
 <ul>
+  <li> Dependently typed Proto-Quipper.
+        [<a href = "https://gitlab.com/frank-peng-fu/dpq-remake"> Project link</a>]
+        </br>
+      <p> <strong>Summary:</strong> 
+        Dependently typed Proto-Quipper is language for programming
+        quantum circuits. It is an on-going project,
+        one of the goals for this project is to make a type safe version of Quipper.
+        We have implemented an prototype for this language. 
+        The main features include linear and dependent types. Linear
+        types ensure the no-cloning property, while dependent types make programming
+        circuit more natural. 
+      </p>
+    </li> 
+
     <li> Dependently typed folds for nested data types. 
         [<a href = "https://github.com/Fermat/dependent-fold"> Project link</a>]
         [<a href = "https://arxiv.org/abs/1806.05230"> Paper documention in arXiv</a>]</br>
