--- a/index.html
+++ b/index.html
@@ -254,7 +254,19 @@
 <h3><a href="#Top">Teaching</a> </h3>
 
 <ul>
-  <li>[MATH/CSCI 2112] Discrete Structures I, 2019 Summer, Dalhousie University.
+    <li>Discrete Structures I, 2020 Summer, Dalhousie University.
+    <p>
+      <strong>Remarks:</strong>
+    <ul>
+      <li>
+        The class will be taught completely online.  
+      </li>
+      <li>
+        I am a co-instructor. 
+      </li>
+    </ul>
+
+  <li>Discrete Structures I, 2019 Summer, Dalhousie University.
     <p>
       <strong>Remarks:</strong>
     <ul>
