--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       in a total programming language with <a href="#nested">dependent types</a>.
       Recently, I am working on the design and implementation of a linear
       dependently typed system for <a href="#dpq">quantum programming language</a>,
-      see a tutorial <a href="#dpq-tutorial">here</a>.
+      see a tutorial <a href="#dpq-tutorial">here</a>. I am on the job market right now,
+      have a look at my <a href="./document/cv/frank-fu-cv.pdf">CV</a>! 
     
     </p>
   </div>
