add arxiv for rc

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
    <li><a name="dpq-tutorial"></a>
     <p><em> A tutorial introduction to quantum circuit programming in dependently typed Proto-Quipper.</em>
-    Peng Fu, Kohei Kishida, Neil J. Ross, Peter Selinger, 12th International Conference on Reversible Computation, 2020.
+    Peng Fu, Kohei Kishida, Neil J. Ross, Peter Selinger, 12th International Conference on Reversible Computation, 2020. [<a href="https://arxiv.org/abs/2005.08396">arXiv</a>]
     </p></li>
 
   
@@ -177,7 +177,8 @@
 
 <ul>
   <li> Dependently typed Proto-Quipper.
-        [<a href = "https://gitlab.com/frank-peng-fu/dpq-remake"> Project link</a>]
+    [<a href = "https://gitlab.com/frank-peng-fu/dpq-remake"> Project link</a>]
+    [<a href = "https://arxiv.org/abs/2005.08396"> Tutorial in arXiv</a>]
         </br>
       <p> <strong>Summary:</strong> 
         Dependently typed Proto-Quipper is language for programming
