fix a display problem for firefox

--- a/index.html
+++ b/index.html
@@ -96,19 +96,22 @@
 
 <h3><a href="#Top">Papers</a> </h3>
 <ul>
-   <li><a name="dpq"></a>
+  <a name="dpq"></a>
+  <li> 
     <p><em> Linear Dependent Type Theory for Quantum Programming Languages.</em>
     Peng Fu, Kohei Kishida, Peter Selinger, 35th Annual ACM/IEEE Symposium on Logic
   in Computer Science, 2020. 
     [<a href="https://arxiv.org/abs/2004.13472">arXiv</a>]</p></li>
 
-   <li><a name="dpq-tutorial"></a>
+  <a name="dpq-tutorial"></a>
+  <li> 
     <p><em> A tutorial introduction to quantum circuit programming in dependently typed Proto-Quipper.</em>
     Peng Fu, Kohei Kishida, Neil J. Ross, Peter Selinger, 12th International Conference on Reversible Computation, 2020. [<a href="https://arxiv.org/abs/2005.08396">arXiv</a>]
     </p></li>
 
   
-   <li><a name="nested"></a>
+  <a name="nested"></a>
+  <li>
     <p><em> Dependently typed folds for nested data types.</em>
     Peng Fu, Peter Selinger, 2018.
     [<a href="https://arxiv.org/abs/1806.05230">arXiv</a>]</p></li>
@@ -117,8 +120,9 @@
     Peng Fu, 2017.
     [<a href="https://arxiv.org/abs/1711.04718">arXiv</a>]</p></li>
   
-  <li><a name="rewriting"></a>
-      <p><em> Representing Nonterminating Rewriting with $\mathbf{F}^2_{\mu}$.</em>
+  <a name="rewriting"></a>
+  <li>
+    <p><em> Representing Nonterminating Rewriting with $\mathbf{F}^2_{\mu}$.</em>
       Peng Fu, 2017. 
     [<a href="https://arxiv.org/abs/1706.00746">arXiv</a>]</p></li>
 
@@ -127,9 +131,10 @@
     Aaron Stump, Peng Fu. Journal of Functional Programming, 2016.
     [<a href="./document/papers/efficiency.pdf">pdf</a>]</p></li>
 
-  <li><a name="resolve"></a>
-<p><em>Proof Relevant Corecursive Resolution.</em>
-    Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond.
+  <a name="resolve"></a>
+  <li>
+    <p><em>Proof Relevant Corecursive Resolution.</em>
+      Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond.
       International Symposium on Functional and Logic Programming, 2016.
      [<a href="./document/papers/corec.pdf">pdf</a>] 
       </p></li>
@@ -142,17 +147,17 @@
       [<a href="./document/papers/tm-lp.pdf">pdf</a>]
       </p></li>
   
-   <li><a name="self-type"></a>
-
-<p><em> Lambda Encodings in Type Theory.</em>
+  <a name="self-type"></a>
+  <li>
+    <p><em> Lambda Encodings in Type Theory.</em>
     Peng Fu, Dissertation, 2014.
       [<a href="./document/papers/dissertation.pdf">pdf</a>]
       </p></li>
-      <li>
-          <p><em>Self Types for Dependently Typed Lambda Encodings.</em>
-    Peng Fu, Aaron Stump. Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications, 2014.
+  <li>
+    <p><em>Self Types for Dependently Typed Lambda Encodings.</em>
+      Peng Fu, Aaron Stump. Joint 25th International Conference on Rewriting Techniques and Applications and 12th International Conference on Typed Lambda Calculi and Applications, 2014.
       [<a href="./document/papers/rta-tlca.pdf">pdf</a>]
-      </p></li>
+  </p></li>
 
 
   <li><p><em> Equational Reasoning about Programs with General Recursion and Call-by-value Semantics.</em>
