--- a/index.html
+++ b/index.html
@@ -355,8 +355,9 @@
  
     <li><p><em> Dependently-typed Programming with Scott Encoding</em>. Peng Fu, Aaron Stump. 2013. [<a href="./document/papers/scott-dep.pdf">pdf</a>]</p></li>
  
-    <li><a name="gottlob"></a>
-<p> <em>Lambda Encoding with Comprehension</em>. [<a href="./document/notes/comprehension.pdf">pdf</a>]</p>
+    <a name="gottlob"></a>
+    <li>
+      <p> <em>Lambda Encoding with Comprehension</em>. [<a href="./document/notes/comprehension.pdf">pdf</a>]</p>
     <p>Peng Fu. Oct 2013.</p>
     
     <p><strong>Remarks</strong>: A Chapter from my dissertation.</p></li>
