add lecture note2

--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
       <strong>Remarks:</strong>
     <ul>
       <li>
-        The class will be taught completely online.  
+        The class is taught completely online. <a href="./document/teaching/cs2112/lecture-note-2.pdf"> Here</a>
+        is a copy of revised version of lecture note that I wrote. 
       </li>
       <li>
         I am a co-instructor. 
