add lics talk link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
     <p><em> Linear Dependent Type Theory for Quantum Programming Languages.</em>
     Peng Fu, Kohei Kishida, Peter Selinger, 35th Annual ACM/IEEE Symposium on Logic
   in Computer Science, 2020. 
-    [<a href="https://arxiv.org/abs/2004.13472">arXiv</a>]</p></li>
+      [<a href="https://arxiv.org/abs/2004.13472">arXiv</a>] [<a href="https://www.youtube.com/watch?v=VQw-G3DGY2w">talk</a>]</p></li></p></li>
+  
 
   <a name="dpq-tutorial"></a>
   <li> 
@@ -298,30 +299,35 @@
 
 <ul>
 
+  <li><p><em>Linear dependent theory for quantum programming languages</em>,
+      July 8th, 2020, LICS, Online conference.  
+      [<a href="https://www.youtube.com/watch?v=VQw-G3DGY2w">talk</a>]
+  </p></li>
+  
   <li><p><em>Linear dependent types for quantum circuit programming</em>,
-      February 17, 2020, PL Reading Group, University of Maryland, College Park, Maryland, USA.
+      February 17th, 2020, PL Reading Group, University of Maryland, College Park, Maryland, USA.
       [<a href="./document/talks/umd-2020.pdf">Slides</a>]
   </p></li>
   
   <li><p><em>Dependent types in Proto-quipper</em>,
-      September 20, 2018, Dagstuhl Seminar: Quantum Programming Languages, Dagstuhl, Germany.
+      September 20th, 2018, Dagstuhl Seminar: Quantum Programming Languages, Dagstuhl, Germany.
   </p></li>
   
   <li><p><em>Encoding Data in Lambda Calculus: An Introduction</em>,
-      September 26, 2017, Atlantic Category Seminar, Dalhousie University, Canada.
+      September 26th, 2017, Atlantic Category Seminar, Dalhousie University, Canada.
       [<a href="./document/talks/lam.pdf">Slides</a>]</p></li>
 
   <li><p><em>Proof Relevant Corecursive Resolution</em>,
-      June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="./document/talks/spls-2016.pdf">Slides</a>]</p></li>
+      June 22nd, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="./document/talks/spls-2016.pdf">Slides</a>]</p></li>
 
   <li><p><em>A Type-Theoretic Approach to Structural Resolution</em>,
-      July 13, 2015, LOPSTR, Siena, Italy. [<a href="./document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
+      July 13th, 2015, LOPSTR, Siena, Italy. [<a href="./document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
 
   <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>,
-      July 15, 2014, RTA-TLCA, Vienna, Austria. [<a href="./document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
+      July 15th, 2014, RTA-TLCA, Vienna, Austria. [<a href="./document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
 
   <li><p><em>Lambda Encodings in Type Theory</em>,
-      May 2, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="./document/talks/thesis-talk.pdf">Slides</a>]</p></li>
+      May 2nd, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="./document/talks/thesis-talk.pdf">Slides</a>]</p></li>
 
   <li><p><em>Dependent Lambda Encoding with Self Types</em>,
       September 2013, ACM SIGPLAN Workshop on Dependently-Typed Programming(DTP), Boston, MA. [<a href="./document/talks/dtp-2013.pdf">Slides</a>]</p></li>
