--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <p><strong>Remarks</strong>: This note shows how one can have a notion of <em>logic programming</em> based solely on term matching.</p></li>
   
   <li><p><em>Realizability at work</em>, June, 2017. [<a href="./document/notes/realization.pdf">pdf</a>]</p>
-    <p><strong>Remarks</strong>: This notes shows examples of realization by termination and realization by shape index.</p></li>
+    <p><strong>Remarks</strong>: This note shows examples of realization by termination and realization by shape index.</p></li>
 </ul>
 
 <script type="text/javascript">
