--- a/index.html
+++ b/index.html
@@ -100,16 +100,20 @@
   <li> 
     <p><em> Linear Dependent Type Theory for Quantum Programming Languages.</em>
     Peng Fu, Kohei Kishida, Peter Selinger, 35th Annual ACM/IEEE Symposium on Logic
-  in Computer Science, 2020. 
-      [<a href="https://arxiv.org/abs/2004.13472">arXiv</a>] [<a href="https://www.youtube.com/watch?v=VQw-G3DGY2w">talk</a>]</p></li></p></li>
-  
+      in Computer Science, 2020. [<a href="./document/papers/lics-2020.pdf">pdf</a>]
+      [<a href="https://www.youtube.com/watch?v=VQw-G3DGY2w">talk</a>]</p></li></p></li>
+
+<p><strong>Remarks</strong>: Invited for submission to special issue of Logical Methods in Computer Science (LMCS)
+   devoted to selected papers from LICS 2020. Submission available at <a href="https://arxiv.org/abs/2004.13472">arXiv</a>. </p>
 
   <a name="dpq-tutorial"></a>
   <li> 
     <p><em> A tutorial introduction to quantum circuit programming in dependently typed Proto-Quipper.</em>
-    Peng Fu, Kohei Kishida, Neil J. Ross, Peter Selinger, 12th International Conference on Reversible Computation, 2020. [<a href="https://arxiv.org/abs/2005.08396">arXiv</a>]
+    Peng Fu, Kohei Kishida, Neil J. Ross, Peter Selinger, 12th International Conference on Reversible Computation, 2020. [<a href="./document/papers/rc-2020.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2005.08396">arXiv</a>]
     </p></li>
 
+<p><strong>Remarks</strong>: Invited for submission to special issue on Science of Computer Programming (SCP).
+  Submission available at <a href="./document/papers/scp-journal.pdf">here</a>. </p>
   
   <a name="nested"></a>
   <li>
@@ -355,8 +359,7 @@
   <li><p> <em>Type Preservation for Curry Style $\mathbf{F}_{\omega}$</em>, July 2013. [<a href="./document/notes/fomega-presv.pdf">pdf</a>]</p>
       <p><strong>Remarks</strong>: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style System $\mathbf{F}$ to $\mathbf{F}_{\omega}$</p></li>
 
-  <li><p> <em>Lambda Encoding, Types and Confluence</em>. [<a href="./document/notes/comp-exam.pdf">pdf</a>]</p>
-    <p>Peng Fu. May 2013.</p>
+  <li><p> <em>Lambda Encoding, Types and Confluence</em>, May 2013. [<a href="./document/notes/comp-exam.pdf">pdf</a>]</p>
     <p><strong>Remarks</strong>: This is my comprehensive exam paper.</p></li>
 
  
@@ -364,9 +367,7 @@
  
     <a name="gottlob"></a>
     <li>
-      <p> <em>Lambda Encoding with Comprehension</em>. [<a href="./document/notes/comprehension.pdf">pdf</a>]</p>
-    <p>Peng Fu. Oct 2013.</p>
-    
+      <p> <em>Lambda Encoding with Comprehension</em>, October 2013. [<a href="./document/notes/comprehension.pdf">pdf</a>]</p>
     <p><strong>Remarks</strong>: A Chapter from my dissertation.</p></li>
 
  
