--- a/index.html
+++ b/index.html
@@ -302,6 +302,10 @@
 <h3><a href="#Top">Talks</a> </h3>
 
 <ul>
+  <li><p><em>Fun with cryptography</em>,
+      Feb 24th, 2021, Math Circles monthly online event, Dalhousie University.
+      [<a href="./document/talks/cryptography.pdf">slides</a>]
+  </p></li>
 
   <li><p><em>Linear dependent theory for quantum programming languages</em>,
       July 8th, 2020, LICS, Online conference.  
