add recent agda teaching.

--- a/index.html
+++ b/index.html
@@ -266,6 +266,19 @@
 <h3><a href="#Top">Teaching</a> </h3>
 
 <ul>
+    <li> Logic in Computer Science, 2021 Winter, Dalhousie University.
+    <p>
+      <strong>Remarks:</strong>
+    <ul>
+      <li>
+        An online class teaching the interactive theorem prover agda.
+      </li>
+
+      <li>
+        I was the teaching assistant, I helped develop homework and projects. 
+      </li>
+    </ul>
+
     <li>Discrete Structures I, 2020 Summer, Dalhousie University.
     <p>
       <strong>Remarks:</strong>
