update talk info.

--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
       which leads to a connection to <a href="#rewriting">term rewriting</a>.
       I was excited to discover that we can verify and program with nested data types
       in a total programming language with <a href="#nested">dependent types</a>.
-      Recently, I am working on the design and implementation of a linear
+      I am working on the design and implementation of a linear
       dependently typed system for <a href="#dpq">quantum programming language</a>,
-      see a tutorial <a href="#dpq-tutorial">here</a>. I am on the job market right now,
+      see a tutorial <a href="#dpq-tutorial">here</a>.
+      I am on the job market right now,
       have a look at my <a href="./document/cv/frank-fu-cv.pdf">CV</a>! 
     
     </p>
@@ -315,6 +316,13 @@
 <h3><a href="#Top">Talks</a> </h3>
 
 <ul>
+  <li><p><em> Proto-Quipper: a quantum programming language</em>,
+      July 2nd, 2021, Logic, Quantum Computing, and Artificial Intelligence, Online workshop. 
+  </p></li>
+
+  <li><p><em>Linear dependent theory for quantum programming languages</em>, June 11th, 2021, QPL, Online conference. 
+  </p></li>
+
   <li><p><em>Fun with cryptography</em>,
       Feb 24th, 2021, Math Circles monthly online event, Dalhousie University.
       [<a href="./document/talks/cryptography.pdf">slides</a>]
